<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserDashboard"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/brandon_blk"
                        android:text="@string/logo_name"
                        android:textColor="@color/colorAccent"
                        android:textSize="28sp" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="224dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/l1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/card_1"
                            android:elevation="8dp"
                            android:onClick="small_room">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/room_icon" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="34dp"
                            android:gravity="center_horizontal"
                            android:text="@string/smallrooms"
                            android:textAlignment="center" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/l2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/card_2"
                            android:elevation="8dp"
                            android:onClick="medium_room">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/room_icon" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="34dp"
                            android:gravity="center_horizontal"
                            android:text="@string/mediumroom"
                            android:textAlignment="center" />


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="224dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/card_3"
                            android:elevation="8dp"
                            android:onClick="large_room">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/room_icon" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="34dp"
                            android:gravity="center_horizontal"
                            android:text="@string/largeroom"
                            android:textAlignment="center" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/card_4"
                            android:elevation="8dp"
                            android:onClick="double_room">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/doubleroom" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="34dp"
                            android:gravity="center_horizontal"
                            android:text="@string/doubleroom"
                            android:textAlignment="center" />


                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/brandon_bld"
                    android:onClick="feedback"
                    android:text="Send your Feedback " />

                <Button
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/brandon_bld"
                    android:onClick="logout"
                    android:text="logout" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>